test_cases/negative/parser/missing_seperator.snek
export DEFUALT = Noop("hello" "world");
